    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 92 - 07/09/2006 <==

+ <marmir> Added three headers and 1 cpp: 
            modifier.h (abstract classes: Modifier, MatrixModifier and VectorModifier), 
            libmatrixmodifiers.h/cpp (with three matrixmodifiers), and 
            learningalgorithm.h (abstract learning algorithm)

    ==> 91 - 07/09/2006 <==

+ <marmir> Added functions compare, sum, and not for VectorData in vectordata.h
+ <marmir> Added implementation of >> operator for RealMat in ionnfw.cpp
+ <marmir> Added matrix() function to MatrixLinker
C <marmir> Generalized BinaryUpdater in StepUpdater (min e max are now settable)

    ==> 90 - 04/09/2006 <==

C <mave> prettified printing of boolean values of Variant
B <mave> fixed error in boolean constructor of Variant
+ <mave> property 'size' and 'accumulate' to Cluster class
+ <mave> method for getting the value of Accumulate flag
C <mave> re-organization of doxygen groups

    ==> 89 - 03/09/2006 <==

B <mave> fixed errors in PoolUpdater::clone() implementation
+ <mave> added Properties 'inputs' and 'outputs' to Cluster class
C <mave> re-arranging method declaration in Cluster.h using doxygen groups
+ <mave> added Property 'name' to Updtable class
C <mave> Updatable inherits from Propertized now
+ <mave> added const char* (constant string) type support to Variant; changed ionnfw for handling the new type

    ==> 88 - 02/09/2006 <==

+ <mave> added ionnfw.h module that contains all functions regarding input/output operation;
        it contains overloaded operators << for almost all types of NNFW; not yet full implemented