@@ -15,7 +15,12 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
-    ==> 92 - 07/09/2006 <==
+    ==> 94 - 08/09/2006 <==
+
+B <mave> in result accessing in VectorData::neg()
+B <mave> in reallocating memory in VectorData::resize()
+
+    ==> 92 - 08/09/2006 <==
 
 + <marmir> Added three headers and 1 cpp: 
             modifier.h (abstract classes: Modifier, MatrixModifier and VectorModifier), 
